# wolfie3d

./: .editorconfig  .gitignore  README.md  Todo.md  WEAPON_SYSTEM.md  pyproject.toml  test_weapon_switching.py
.github/workflows/: ci.yml
.junie/: guidelines.md
docs/: .gitkeep
scripts/: generate_music.py  generate_sound_effects.py  generate_weapon_sprites.py
src/wolfie3d/: __main__.py  game.py  game_no_enemies.py
